--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -36,7 +36,8 @@
         <activity
             android:theme="@android:style/Theme.Holo.Light"
             android:name="com.noughmad.ntasks.ProjectDetailActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:launchMode="singleTop" >
         </activity>
         <provider
             android:name="TasksProvider"
