--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:theme="@android:style/Theme.Holo.Light"
+            android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
             android:name="com.noughmad.ntasks.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
@@ -30,12 +30,12 @@
                    android:resource="@xml/searchable"/>
         </activity>
         <activity
-            android:theme="@android:style/Theme.Holo.Light"
+            android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
             android:name="com.noughmad.ntasks.AccountActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:theme="@android:style/Theme.Holo.Light"
+            android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
             android:name="com.noughmad.ntasks.ProjectDetailActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop" >
