--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -30,6 +30,11 @@
         </activity>
         <activity
             android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
+            android:name="com.noughmad.ntasks.SettingsActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
             android:name="com.noughmad.ntasks.ProjectDetailActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop" >
