--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -4,11 +4,18 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="16"/>
+    <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="14"/>
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    
+    <permission 
+        android:name="com.noughmad.ntasks.permission.WRITE_TASKS"
+        android:label="@string/permission_write"
+        android:description="@string/permission_write_description"
+        android:protectionLevel="normal"
+        android:permissionGroup="android.permission-group.PRIVATE_DATA" />
 
     <application
         android:name="com.noughmad.ntasks.TasksApplication"
@@ -38,7 +45,31 @@
             android:name="com.noughmad.ntasks.ProjectDetailActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <action android:name="android.intent.action.EDIT" />
+                <action android:name="android.intent.action.PICK" />
+                <data android:mimeType="vnd.android.cursor.dir/vnd.com.noughmad.ntasks.provider.Task" />
+            </intent-filter>
         </activity>
+        <provider
+            android:name="com.noughmad.ntasks.TasksProvider"
+            android:authorities="com.noughmad.ntasks.provider"
+            android:syncable="true"
+            android:writePermission="com.noughmad.ntasks.WRITE_TASKS" >
+        </provider>
+        <service android:name=".SyncService" />
+        <service android:name=".TimeTrackingService" />
+        
+        <receiver android:name=".TimeTrackingReceiver" >
+            <intent-filter>
+                <action android:name="com.noughmad.ntasks.ACTION_START_TRACKING" />
+                <data android:mimeType="vnd.android.cursor.item/vnd.com.noughmad.ntasks.provider.Task" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="com.noughmad.ntasks.ACTION_STOP_TRACKING" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
