--- a/Android/.classpath
+++ b/Android/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="/home/miha/Programiranje/Parse/nTasks/Android/libs/Parse-1.1.4.jar"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry kind="lib" path="/home/miha/Programiranje/Parse/nTasks/Android/libs/Androidplot-core-0.5.0-release.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
