--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -66,7 +66,7 @@
             android:syncable="false"
             android:writePermission="com.noughmad.ntasks.WRITE_TASKS" >
         </provider>
-        <service android:name=".SyncService" />
+        <service android:name=".sync.SyncService" />
         <service android:name=".TimeTrackingService" />
         
         <receiver android:name=".TimeTrackingReceiver" >
