--- a/Android/.classpath
+++ b/Android/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="lib" path="/home/miha/Programiranje/Parse/nTasks/Android/libs/Parse-1.1.4.jar"/>
+	<classpathentry kind="lib" path="libs/android-support-v13.jar"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="lib" path="/home/miha/Programiranje/Parse/nTasks/Android/libs/Androidplot-core-0.5.0-release.jar"/>
