--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -45,8 +45,7 @@
         <activity
             android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
             android:name="com.noughmad.ntasks.ProjectDetailActivity"
-            android:label="@string/app_name"
-            android:launchMode="singleTop" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <action android:name="android.intent.action.EDIT" />
