--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -4,7 +4,7 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="14"/>
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="8"/>
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -22,9 +22,9 @@
     <application
         android:name="com.noughmad.ntasks.TasksApplication"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+	    android:theme="@style/app_theme" >
         <activity
-            android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
             android:name="com.noughmad.ntasks.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
@@ -33,17 +33,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
             android:name="com.noughmad.ntasks.AccountActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
             android:name="com.noughmad.ntasks.SettingsActivity"
+            android:theme="@style/settings_theme"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
             android:name="com.noughmad.ntasks.ProjectDetailActivity"
             android:label="@string/app_name" >
             <intent-filter>
